#320 Datepicker popup is On When the Above Swich is On

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -3260,5 +3260,7 @@ input:checked + .slider:before {
 .ui-widget-header 
 .ui-state-default{
     background-color: white;
+}
+.enable .ui-state-default{
     cursor: move;
 }
